# jefscad

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  DEVELOPMENT.md  LICENSE  README.md  arch_disc_notes.md  notes.md  pyproject.toml
docs/: api.rst  concepts.rst  conf.py  getting_started.rst  index.rst
flint/: Cargo.toml  README.md  notes.md
flint/src/: arith.rs  cmp.rs  conv.rs  fmt.rs  lib.rs  linalg.rs  math.rs  next_up_down.rs
jefscad/: Cargo.toml  brep_notes.md  notes.md
jefscad/src/: brep_compiler.rs  brep_kernel.rs  csg_lang.rs  geom.rs  lib.rs  mesher.rs  py_bindings.rs
notebooks/: playground.ipynb
python/jefscad/: __init__.py
python/jefscad/_jefscad/: __init__.pyi
tests/: test_hello.py  test_nodes.py
